--- a/TP Final/style.css
+++ b/TP Final/style.css
@@ -236,6 +236,14 @@
     margin-left: 100px;
 }
 
+.fondo2 {
+    background-color: #4d0bdb;
+    border-radius: 10px;
+    width: 1100px;
+    height: 200px;
+    margin-left: 100px;
+}
+
 .caja6 {
     display: flex;
     justify-content: space-between;
@@ -247,13 +255,19 @@
     height: 200px;
 }
 
+.caja52 {
+    background-color: black;
+    width: 100%;
+    height: 240px;
+}
+
 .caja1 {
     display: flex;
     justify-content: space-between;
     background-color: rgba(202, 202, 202, 0.74);
     height: 50px;
     border-bottom-left-radius: 30px;
-    width: 400px;    
+    width: 700px;    
     padding-left: 50px;
 }
 
@@ -330,6 +344,18 @@
     margin-right: 10px;
     display: flex;
     justify-content: space-between;
+}
+
+.ventas {
+    display: flex;
+    justify-content: space-between;
+    background-color: #280474;
+    border-bottom-left-radius: 30px;
+}
+
+.ventas a {
+    color: white;
+    margin-top: 15px;
 }
 
 .logo img {
@@ -476,13 +502,61 @@ body {
 
 .container2 .Canales {
     background-color: #4d0bdb;
-    color: white;
     border-radius: 50px;
     cursor: pointer;
     text-align: center;
-    width: 110px;
-    height: 40px;
+    width: 120px;
+    height: 50px;
+    margin-top: 15px;
+    margin-right: 15px;
     transition: background-color 0.3s;
+}
+.container1 .Canales a {
+    color: white;
+    text-decoration: none;
+    display:flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-left: 30px;
+}
+
+.cards {
+    display:flex;
+    justify-content: space-between;
+    width: auto;
+}
+
+.cards .card1 {
+    background-color: white;
+    width: 300px;
+    height: 350px;
+    border-radius: 10px;
+}
+
+.card1 a {
+    color: #4d4d4d;
+    text-decoration: none;
+    display:flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.card1 h2 {
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.container2 .Canales a {
+    color: white;
+    text-decoration: none;
+    display:flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    padding-top: 15px;
 }
 
 .Canales:hover {
@@ -500,4 +574,48 @@ body {
 .container3 {
     display: flex;
     justify-content: space-around;
+}
+
+.card {
+    background-color: white;
+    width: 1293px;
+    height: 430px;
+    border-radius: 10px;
+}
+
+.card p {
+    margin-left: 20px;
+    color:#4d4d4d
+}
+
+.card h2 {
+    margin-left: 20px;
+}
+
+.card h3 {
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+.last {
+    width: 850px;
+    height: 200px;
+    display: flex;
+    background-color: white;
+    justify-content: space-between;
+}
+
+.last h3 {
+    margin-top: 30px;
+    margin-left: 20px;
+    color: #4d4d4d;
+    font-size: 15px;
+}
+
+.last a {
+    margin-left: 20px;
+    text-decoration: none;
+    display: flex;
+    color: #4d0bdb;
+    width: 150px;
 }
